// This contains protobuf types in pair with ClairCore's types, with
// minimal differences. See https://github.com/quay/claircore for comments
// on the fields.

syntax = "proto3";

package scanner.v4;

import "google/protobuf/timestamp.proto";
import "internalapi/scanner/v4/common.proto";

option go_package = "./internalapi/scanner/v4;v4";

message VulnerabilityReport {
  message Vulnerability {
    enum Severity {
      SEVERITY_UNSPECIFIED = 0;
      SEVERITY_LOW = 1;
      SEVERITY_MODERATE = 2;
      SEVERITY_IMPORTANT = 3;
      SEVERITY_CRITICAL = 4;
    }
    message CVSS {
      enum Source {
        SOURCE_UNKNOWN = 0;
        SOURCE_RED_HAT = 1;
        SOURCE_OSV = 2;
        SOURCE_NVD = 3;
      }
      message V2 {
        float base_score = 1;
        string vector = 2;
      }
      message V3 {
        float base_score = 1;
        string vector = 2;
      }
      V2 v2 = 1;
      V3 v3 = 2;
      Source source = 3;
      string url = 4;
    }
    message EPSS {
      string date = 1;
      string model_version = 2;
      float probability = 3;
      float percentile = 4;
    }
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp issued = 4;
    string link = 5 [deprecated = true]; // link is duplicated with CVSS URL field, the exact deprecation date is undecided
    string severity = 6;
    Severity normalized_severity = 7;
    string package_id = 8;
    string distribution_id = 9;
    string repository_id = 10;
    string fixed_in_version = 11;
    CVSS cvss = 12 [deprecated = true]; // value of cvss field is included in cvss_metrics field, the exact deprecation date is undecided
    repeated CVSS cvss_metrics = 13;
    EPSS epss_metrics = 14;
  }
  enum Note {
    NOTE_UNSPECIFIED = 0;
    NOTE_OS_UNKNOWN = 1;
    NOTE_OS_UNSUPPORTED = 2;
  }

  string hash_id = 1;
  map<string, Vulnerability> vulnerabilities = 2;
  map<string, StringList> package_vulnerabilities = 3;
  Contents contents = 4;
  repeated Note notes = 5;
}

message StringList {
  repeated string values = 1;
}
